--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,14 +1,17 @@
-// storing the color gray in a variable called $gray
-$gray : #d3d3d3;
+// #map {
+//     position: absolute;
+//     top: 0;
+//     left: 0;
+//     right: 0;
+//     bottom: 0;
+// }
 
-.box {
-  background: $gray;
-  border: 3px solid black;
-  padding: 40px 80px;
-  .button {
-    font-weight: bold;
-    text-align: center;
-    background: red;
-    color: white;
+html, body, .container {
+    height: 100%;
+    margin: 0;
+    padding: 0;
   }
+
+#map {
+  height: 100%;
 }
